--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="bg-slate-900 w-full h-full">
+<div class="bg-slate-500 w-100% h-max overflow-hidden">
     <app-header></app-header>
-    <app-home></app-home>
+    <router-outlet></router-outlet>    
 </div>
