--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,18 +1,20 @@
-<mat-card class="shadow">
-    <img mat-card-image
-    class="h-[300px] "
-    [src] = "product.imageUrl">
-   
-    <div class="p-4">
-    <h1>{{product.name}}</h1>
-    <h2>{{product.category}}</h2>
-    <div class="flex gap-2">
-        <span>{{product.price}}</span>
-        <span><s>Rs. 2000</s></span>
-        <span>(50%) off </span>
+<div class="flex justify-center ">
+    <mat-card class="shadow w-9/12 ">
+        <img mat-card-image
+        class="h-[300px] "
+        [src] = "product.imageUrl">
+       
+        <div class="p-4">
+        <h1>{{product.name}}</h1>
+        <h2>{{product.category}}</h2>
+        <div class="flex gap-2">
+            <span>{{product.price}}</span>
+            <span><s>Rs. 2000</s></span>
+            <span>(50%) off </span>
+        </div>
+        <div class="flex justify-center ">
+            <button mat-raised-button color="primary" (click)="view()">View</button>
+        </div>
     </div>
-    <div class="flex justify-center ">
-        <button mat-raised-button color="primary" (click)="view()">View</button>
-    </div>
+    </mat-card>
 </div>
-</mat-card>
